--- a/public/styles.css
+++ b/public/styles.css
@@ -566,24 +566,417 @@ video {
 [hidden] {
   display: none;
 }
-.pt-14 {
-	padding-top: 3.5rem;
+
+*, ::before, ::after {
+	--tw-translate-x: 0;
+	--tw-translate-y: 0;
+	--tw-rotate: 0;
+	--tw-skew-x: 0;
+	--tw-skew-y: 0;
+	--tw-scale-x: 1;
+	--tw-scale-y: 1;
+	--tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+	--tw-ring-offset-shadow: 0 0 #0000;
+	--tw-ring-shadow: 0 0 #0000;
+	--tw-shadow: 0 0 #0000;
+	--tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
+	--tw-ring-offset-width: 0px;
+	--tw-ring-offset-color: #fff;
+	--tw-ring-color: rgba(59, 130, 246, 0.5);
+	--tw-ring-offset-shadow: 0 0 #0000;
+	--tw-ring-shadow: 0 0 #0000;
+	--tw-shadow: 0 0 #0000;
+}
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border-width: 0;
+}
+.absolute {
+	position: absolute;
+}
+.relative {
+	position: relative;
+}
+.inset-y-0 {
+	top: 0px;
+	bottom: 0px;
+}
+.-top-16 {
+	top: -4rem;
+}
+.-left-12 {
+	left: -3rem;
+}
+.-top-20 {
+	top: -5rem;
+}
+.-right-56 {
+	right: -14rem;
+}
+.top-8 {
+	top: 2rem;
+}
+.right-8 {
+	right: 2rem;
+}
+.right-12 {
+	right: 3rem;
+}
+.col-span-2 {
+	grid-column: span 2 / span 2;
+}
+.mx-auto {
+	margin-left: auto;
+	margin-right: auto;
+}
+.mt-4 {
+	margin-top: 1rem;
+}
+.ml-5 {
+	margin-left: 1.25rem;
+}
+.ml-3 {
+	margin-left: 0.75rem;
+}
+.mt-3 {
+	margin-top: 0.75rem;
+}
+.ml-1 {
+	margin-left: 0.25rem;
+}
+.flex {
+	display: flex;
+}
+.grid {
+	display: grid;
+}
+.h-16 {
+	height: 4rem;
+}
+.h-\[360px\] {
+	height: 360px;
+}
+.h-\[200px\] {
+	height: 200px;
+}
+.h-\[72px\] {
+	height: 72px;
+}
+.h-\[512px\] {
+	height: 512px;
+}
+.h-32 {
+	height: 8rem;
+}
+.h-12 {
+	height: 3rem;
+}
+.h-full {
+	height: 100%;
+}
+.min-h-screen {
+	min-height: 100vh;
+}
+.w-\[640px\] {
+	width: 640px;
+}
+.w-\[200px\] {
+	width: 200px;
+}
+.w-\[64px\] {
+	width: 64px;
+}
+.w-\[512px\] {
+	width: 512px;
+}
+.w-64 {
+	width: 16rem;
+}
+.w-12 {
+	width: 3rem;
+}
+.w-4 {
+	width: 1rem;
+}
+.w-2\/3 {
+	width: 66.666667%;
+}
+.w-36 {
+	width: 9rem;
+}
+.max-w-5xl {
+	max-width: 64rem;
+}
+.max-w-lg {
+	max-width: 32rem;
+}
+.translate-x-16 {
+	--tw-translate-x: 4rem;
+	transform: var(--tw-transform);
+}
+.rotate-3 {
+	--tw-rotate: 3deg;
+	transform: var(--tw-transform);
+}
+.-rotate-3 {
+	--tw-rotate: -3deg;
+	transform: var(--tw-transform);
+}
+.list-disc {
+	list-style-type: disc;
+}
+.flex-col {
+	flex-direction: column;
+}
+.place-items-center {
+	place-items: center;
+}
+.items-center {
+	align-items: center;
+}
+.justify-end {
+	justify-content: flex-end;
+}
+.gap-4 {
+	gap: 1rem;
+}
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+.self-center {
+	align-self: center;
+}
+.overflow-hidden {
+	overflow: hidden;
+}
+.rounded-full {
+	border-radius: 9999px;
+}
+.rounded-2xl {
+	border-radius: 1rem;
+}
+.bg-blue-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
+}
+.bg-pink-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(236, 72, 153, var(--tw-bg-opacity));
+}
+.bg-gray-900 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+}
+.bg-white {
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+.bg-purple-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(221, 214, 254, var(--tw-bg-opacity));
+}
+.bg-purple-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(139, 92, 246, var(--tw-bg-opacity));
+}
+.bg-yellow-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(253, 230, 138, var(--tw-bg-opacity));
+}
+.object-cover {
+	-o-object-fit: cover;
+	   object-fit: cover;
+}
+.p-4 {
+	padding: 1rem;
+}
+.p-8 {
+	padding: 2rem;
+}
+.py-16 {
+	padding-top: 4rem;
+	padding-bottom: 4rem;
+}
+.px-8 {
+	padding-left: 2rem;
+	padding-right: 2rem;
 }
 .text-center {
 	text-align: center;
+}
+.text-2xl {
+	font-size: 1.5rem;
+	line-height: 2rem;
+}
+.text-xl {
+	font-size: 1.25rem;
+	line-height: 1.75rem;
 }
 .text-4xl {
 	font-size: 2.25rem;
 	line-height: 2.5rem;
 }
-.font-bold {
-	font-weight: 700;
+.text-xs {
+	font-size: 0.75rem;
+	line-height: 1rem;
 }
-.text-blue-600 {
-	--tw-text-opacity: 1;
-	color: rgba(37, 99, 235, var(--tw-text-opacity));
+.font-medium {
+	font-weight: 500;
 }
-.text-red-600 {
+.font-semibold {
+	font-weight: 600;
+}
+.font-extrabold {
+	font-weight: 800;
+}
+.uppercase {
+	text-transform: uppercase;
+}
+.tracking-wider {
+	letter-spacing: 0.05em;
+}
+.text-blue-900 {
 	--tw-text-opacity: 1;
-	color: rgba(220, 38, 38, var(--tw-text-opacity));
+	color: rgba(30, 58, 138, var(--tw-text-opacity));
+}
+.text-purple-900 {
+	--tw-text-opacity: 1;
+	color: rgba(76, 29, 149, var(--tw-text-opacity));
+}
+.text-purple-600 {
+	--tw-text-opacity: 1;
+	color: rgba(124, 58, 237, var(--tw-text-opacity));
+}
+.text-gray-900 {
+	--tw-text-opacity: 1;
+	color: rgba(17, 24, 39, var(--tw-text-opacity));
+}
+.text-yellow-200 {
+	--tw-text-opacity: 1;
+	color: rgba(253, 230, 138, var(--tw-text-opacity));
+}
+.shadow-2xl {
+	--tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.ring-4 {
+	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.ring-white {
+	--tw-ring-opacity: 1;
+	--tw-ring-color: rgba(255, 255, 255, var(--tw-ring-opacity));
+}
+
+.hover\:text-purple-700:hover {
+	--tw-text-opacity: 1;
+	color: rgba(109, 40, 217, var(--tw-text-opacity));
+}
+
+@media (min-width: 540px) {
+
+	.xs\:col-span-2 {
+		grid-column: span 2 / span 2;
+	}
+
+	.xs\:col-start-2 {
+		grid-column-start: 2;
+	}
+
+	.xs\:row-start-2 {
+		grid-row-start: 2;
+	}
+
+	.xs\:grid {
+		display: grid;
+	}
+
+	.xs\:h-auto {
+		height: auto;
+	}
+
+	.xs\:grid-cols-2 {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
+	.xs\:self-center {
+		align-self: center;
+	}
+  .xs\:square {
+    aspect-ratio: 1 / 1;
+  }
+}
+
+@media (min-width: 640px) {
+
+	.sm\:max-w-none {
+		max-width: none;
+	}
+
+	.sm\:grid-cols-2 {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
+	.sm\:place-items-center {
+		place-items: center;
+	}
+}
+
+@media (min-width: 768px) {
+
+	.md\:col-span-3 {
+		grid-column: span 3 / span 3;
+	}
+
+	.md\:col-span-2 {
+		grid-column: span 2 / span 2;
+	}
+
+	.md\:col-start-1 {
+		grid-column-start: 1;
+	}
+
+	.md\:col-start-2 {
+		grid-column-start: 2;
+	}
+
+	.md\:grid-cols-4 {
+		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+
+	.md\:grid-cols-3 {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
+
+	.md\:px-4 {
+		padding-left: 1rem;
+		padding-right: 1rem;
+	}
+
+	.md\:pr-12 {
+		padding-right: 3rem;
+	}
+
+	.md\:pr-4 {
+		padding-right: 1rem;
+	}
+
+	.md\:pl-4 {
+		padding-left: 1rem;
+	}
+
+	.md\:text-lg {
+		font-size: 1.125rem;
+		line-height: 1.75rem;
+	}
 }
